hydroflow/tests/snapshots/surface_examples__example_2_simple_2.snap
---
source: hydroflow/tests/surface_examples.rs
expression: output
---
G'day 16
G'day 17
G'day 25
G'day 26
G'day 36
G'day 37
G'day 49
G'day 50
G'day 64
G'day 65
G'day 81
G'day 82

