hydroflow/tests/snapshots/surface_examples__example_surface_flows_3_ports.snap
---
source: hydroflow/tests/surface_examples.rs
expression: output
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter(vec![&quot;Hello&quot;, &quot;world&quot;])</code>"/]:::pullClass
2v1[/"(2v1) <code>tee()</code>"\]:::pushClass
3v1[\"(3v1) <code>map(|x| x.to_uppercase())</code>"/]:::pullClass
4v1[\"(4v1) <code>map(|x| x.to_lowercase())</code>"/]:::pullClass
5v1[\"(5v1) <code>union()</code>"/]:::pullClass
6v1[/"(6v1) <code>for_each(|x| println!(&quot;{}&quot;, x))</code>"\]:::pushClass
7v1["(7v1) <code>handoff</code>"]:::otherClass
8v1["(8v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
3v1-->|low_road|5v1
2v1-->7v1
4v1-->|high_road|5v1
2v1-->8v1
5v1-->6v1
7v1-->3v1
8v1-->4v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
    subgraph sg_1v1_var_my_tee ["var <tt>my_tee</tt>"]
        1v1
        2v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    3v1
    4v1
    5v1
    6v1
    subgraph sg_2v1_var_my_union ["var <tt>my_union</tt>"]
        5v1
        6v1
    end
end

hello
world
HELLO
WORLD
